# morphix

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CAPABILITIES.md  CHANGELOG.md  LICENSE  PENDING.md  README.md  alembic.ini  example.env  index.html  mkdocs.yml  objects.inv  pyproject.toml  run.py
.github/: CONTRIBUTING.md  SECURITY.md
MANUAL_DE_PRUEBAS/: index.html
agents/: __init__.py  audit.py  base.py  loader.py  profiles.py  registry.py  service.py
alembic/: env.py
api-reference/: index.html
architecture/: index.html
changelog/: index.html
core/: __init__.py  bootstrap.py  cache_manager.py  change_tracker.py  circuit_breaker.py  codebase_indexer.py  config.py  context_manager.py  database.py  embedding_provider.py  faiss_indexer.py  feature_flags.py  git_operations.py  health.py  hook_loader.py  hooks_registry.py  lru_cache.py  metrics.py  models.py  path_resolver.py  rate_limiter.py  token_counter.py  utils.py  workflow_state.py  workspaces.py
desktop/: __init__.py  analytics_tab.py  async_helpers.py  config_tab.py  dashboard_tab.py  editor_tab.py  events.py  history_tab.py  maestro_tab.py  main_window.py  theme.py
developer-guide/: index.html
docs/: MANUAL_DE_PRUEBAS.md  changelog.md  getting-started.md  index.md
getting-started/: index.html
llm/: __init__.py  controller.py  offline.py  parser.py  prompts.py  provider.py
orchestration/: __init__.py  aggregator.py  analyzer.py  context.py  decomposer.py  diagram.py  events.py  finalizer.py  loader.py  loop.py  result_types.py  router.py  runner.py  status.py  supervisor.py  utils.py
search/: search_index.json
templates/: mcp_servers.json
tests/: conftest.py  test_agent_loader.py  test_agent_loop.py  test_agent_router.py  test_agents_registry.py  test_anti_distillation.py  test_audit_log.py  test_bash_manager.py  test_blackboard.py  test_change_tracker.py  test_circuit_breaker.py  test_clarification.py  test_code_search.py  test_codebase_indexer.py  test_collaborative_orchestrator.py  test_context_manager.py  test_continuity.py  test_conversation_repository.py  test_core.py  test_core_models.py  test_core_utils.py  test_decomposer.py  test_desktop_events.py  test_diagram_manager.py  test_diff_editor.py  test_e2e_workflows.py  test_events.py  test_feature_flags.py  test_file_manager.py  test_frustration_detector.py  test_git_manager.py  test_git_operations.py  test_health_check.py  test_hooks.py  test_llm_offline_extras.py  test_llm_parser.py  test_llm_parser_extras.py  test_llm_prompts.py  test_llm_provider.py  test_llm_stream_tool_calls.py  (+42 more)
tools/: __init__.py  ask_clarification.py  bash_manager.py  code_execution.py  code_search.py  diff_editor.py  file_manager.py  git_manager.py  loader.py  lsp_manager.py  (+8 more)
(+154 files in other folders)
